--- a/manifest.json
+++ b/manifest.json
@@ -3,11 +3,15 @@
   "description": "A simple water level app.",
   "manifest_version": 2,
   "version": "1.0",
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  },
   "browser_action": {
     "default_icon": "images/icon.png",
     "default_popup": "popup.html"
   },
   "permissions": [
-    "activeTab"
+    "https://www.hydrodaten.admin.ch/"
   ]
 }
