--- a/manifest.json
+++ b/manifest.json
@@ -3,15 +3,20 @@
   "description": "A simple water level app.",
   "manifest_version": 2,
   "version": "1.0",
-  "background": {
-    "scripts": ["background.js"],
-    "persistent": false
-  },
   "browser_action": {
     "default_icon": "images/icon.png",
     "default_popup": "popup.html"
   },
+  "options_ui": {
+    "page": "options.html",
+    "open_in_tab": true
+  },
+  "background":
+  {
+    "scripts":["background.js"]
+  },
   "permissions": [
-    "https://www.hydrodaten.admin.ch/"
+    "https://www.hydrodaten.admin.ch/",
+    "storage"
   ]
 }
