--- a/manifest.json
+++ b/manifest.json
@@ -4,7 +4,7 @@
   "manifest_version": 2,
   "version": "1.0",
   "browser_action": {
-    "default_icon": "images/icon.png",
+    "default_icon": "resources/images/icon.png",
     "default_popup": "popup.html"
   },
   "options_ui": {
@@ -13,7 +13,7 @@
   },
   "background":
   {
-    "scripts":["background.js"]
+    "scripts":["js/background.js"]
   },
   "permissions": [
     "https://www.hydrodaten.admin.ch/",
