--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
   "name": "Water Level Eye",
   "description": "A simple water level app.",
-  "manifest_version": 2,
-  "version": "1.4",
-  "browser_action": {
+  "manifest_version": 3,
+  "version": "1.5",
+  "action": {
     "default_icon": "resources/images/icon.png",
     "default_popup": "popup.html"
   },
@@ -11,12 +11,13 @@
     "page": "options.html",
     "open_in_tab": true
   },
-  "background":
-  {
-    "scripts":["js/background.js"]
+  "background": {
+    "service_worker": "js/background.js"
   },
+  "host_permissions": [
+    "https://www.hydrodaten.admin.ch/"
+  ],
   "permissions": [
-    "https://www.hydrodaten.admin.ch/",
     "storage",
     "notifications"
   ]
